@@ -1,11 +1,12 @@
 #Hawkscope internal properties. Not for modification.
 #$Id$
-name            = Hawkscope
-slogan          = Access anything with single click!
-homepage        = http://hawkscope.googlecode.com
-encoding        = UTF-8
-version.number  = 0.6.0
-version.date    = 2009-04-??
-version.url     = http://hawkscope.googlecode.com/svn/trunk/dist/version/
-googlecode.url  = http://code.google.com/p/hawkscope/
-copyright.year  = 2008, 2009
+name               = Hawkscope
+slogan             = Access anything with single click!
+homepage           = http://hawkscope.googlecode.com
+encoding           = UTF-8
+version.number     = 0.6.0
+version.date       = 2009-04-??
+version.url        = http://hawkscope.googlecode.com/svn/trunk/dist/version/
+googlecode.url     = http://code.google.com/p/hawkscope/
+copyright.year     = 2008, 2009
+connection.timeout = 3000
